@@ -10,7 +10,11 @@ The main goal of this crate is to make simulation code look very similar to that
 This is achieved by providing an API similar to that of the standard library or tokio but with an implementation based on discrete events.
 
 This crate provides the simulator itself, a timer that allows an asynchronous task to sleep, and synchronization primitives.
-Additionally, it includes basic primitives for processes and links that can be used to jump start your process.
+Additionally, it includes basic primitives to simulate networking (guarded behind the "network" feature).
+
+## Features
+* `network`: Enable networking primitives
+* `serde`: Support serialization of (some) asim objects using serde
 
 ## Usage
 Take a look at the tests and examples to get an idea how this library is intended to be used.
