@@ -2,6 +2,7 @@
     - Add asim::spawn() function similar to tokio::spawn()
     - Add asim::time::sleep() function similar to tokio::time::sleep()
     - Improve documentation and add examples
+    - Move serde and network module behind feature gates
 
 0.1:
     - Initial Release
